avis sur TFS...

--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -11,6 +11,9 @@ published: true
 
 _(ou comment utiliser Git en environnement hostile!)_
 
+Parmis les contrôleur de code source, "TFS est celui le plus détesté par les développeurs :( et Git celui le plus apprécié":http://www.infoq.com/news/2010/03/Review-Version-Control-Systems .
+Nous allons essayer de contourner les problèmes du 1er grâce au second...
+
 h2. 1.Installation des outils nécessaires
 
 * Installation de "GitExtension":http://code.google.com/p/gitextensions/ (et Git)
