images, légendes, DAG

--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -87,17 +87,19 @@ h2. 3.Rappels sur Git!
 
 Git est :
 * un gestionnaire de contenu (et non de différence!)
-* stocké sous la forme d'un graphe acyclique d'objets
+* stocké sous la forme d'un graphe acyclique d'objets ou DAG(Directed Acyclic Graph)
 * accessible avec des références
 
-!=http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --hitorique du dépot--)!
+|=. !=http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --hitorique du dépot--)! |
+|=. Exemple de graphe acyclique --hitorique du dépot-- |
 
 Toute manipulation de Git ne fait que manipuler ce graphe... (Ne jamais l'oublier et essayer de visualiser cela!!)
 ...en ne faisant qu'ajouter des commits!
 
 h2. 4.Présentation de GitExtension
 
-!={width: 509px; height: 334px;}http://gitextensions.googlecode.com/files/commitlog205.png!
+|=. !={width: 509px; height: 334px;}http://gitextensions.googlecode.com/files/commitlog205.png! |
+|=. Interface de GitExtension montrant le DAG d'historique du dépot |
 
 Démo...
 
@@ -293,14 +295,16 @@ Le merge :
 # Il permet de matérialiser l'introduction d'une fonctionnalité dans une branche.
 # Il permet le travail avec des fichiers modifiés dans l'espace de travail.
 
-!={width: 220px; height: 117px;}http://git-scm.com/figures/18333fig0317-tn.png!
+|=. !=http://git-scm.com/figures/18333fig0317-tn.png! |
+|=. le DAG après un merge : le commit C6 est un commit de merge |
 
 Le rebase :
 # réapplique les commit d'une branche sur un commit.
 # Il permet d'avoir un historique linéaire.
 # Il ne permet pas de travailler avec des fichiers modifiées dans l'espace de travail (stash).
 
-!={width: 195px; height: 93px;}http://git-scm.com/figures/18333fig0329-tn.png!
+|=. !=http://git-scm.com/figures/18333fig0329-tn.png! |
+|=. le DAG après un rebase : le commit C3 est réappliqué sur la branche master... |
 
 * J'ai commité dans le tronc alors que je voulais faire une branche
 
