--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -91,7 +91,7 @@ Git est :
 * accessible avec des références
 
 |=. !=http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --hitorique du dépot--)! |
-|=. Exemple de graphe acyclique --hitorique du dépot-- |
+|=. _Exemple de graphe acyclique représentant l'hitorique du dépot_ |
 
 Toute manipulation de Git ne fait que manipuler ce graphe... (Ne jamais l'oublier et essayer de visualiser cela!!)
 ...en ne faisant qu'ajouter des commits!
@@ -99,7 +99,7 @@ Toute manipulation de Git ne fait que manipuler ce graphe... (Ne jamais l'oublie
 h2. 4.Présentation de GitExtension
 
 |=. !={width: 509px; height: 334px;}http://gitextensions.googlecode.com/files/commitlog205.png! |
-|=. Interface de GitExtension montrant le DAG d'historique du dépot |
+|=. _Interface de GitExtension montrant le DAG d'historique du dépot_ |
 
 Démo...
 
@@ -296,7 +296,7 @@ Le merge :
 # Il permet le travail avec des fichiers modifiés dans l'espace de travail.
 
 |=. !=http://git-scm.com/figures/18333fig0317-tn.png! |
-|=. le DAG après un merge : le commit C6 est un commit de merge |
+|=. _le DAG après un merge : le commit C6 est un commit de merge_ |
 
 Le rebase :
 # réapplique les commit d'une branche sur un commit.
@@ -304,7 +304,7 @@ Le rebase :
 # Il ne permet pas de travailler avec des fichiers modifiées dans l'espace de travail (stash).
 
 |=. !=http://git-scm.com/figures/18333fig0329-tn.png! |
-|=. le DAG après un rebase : le commit C3 est réappliqué sur la branche master... |
+|=. _le DAG après un rebase : le commit C3 est réappliqué sur la branche master..._ |
 
 * J'ai commité dans le tronc alors que je voulais faire une branche
 
