--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -90,7 +90,7 @@ Git est :
 * stocké sous la forme d'un graphe acyclique d'objets ou DAG(Directed Acyclic Graph)
 * accessible avec des références
 
-|=. !=http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --hitorique du dépot--)! |
+|=. !http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --hitorique du dépot--)! |
 |=. _Exemple de graphe acyclique représentant l'hitorique du dépot_ |
 
 Toute manipulation de Git ne fait que manipuler ce graphe... (Ne jamais l'oublier et essayer de visualiser cela!!)
@@ -98,7 +98,7 @@ Toute manipulation de Git ne fait que manipuler ce graphe... (Ne jamais l'oublie
 
 h2. 4.Présentation de GitExtension
 
-|=. !={width: 509px; height: 334px;}http://gitextensions.googlecode.com/files/commitlog205.png! |
+|=. !{width: 509px; height: 334px;}http://gitextensions.googlecode.com/files/commitlog205.png! |
 |=. _Interface de GitExtension montrant le DAG d'historique du dépot_ |
 
 Démo...
@@ -295,7 +295,7 @@ Le merge :
 # Il permet de matérialiser l'introduction d'une fonctionnalité dans une branche.
 # Il permet le travail avec des fichiers modifiés dans l'espace de travail.
 
-|=. !=http://git-scm.com/figures/18333fig0317-tn.png! |
+|=. !http://git-scm.com/figures/18333fig0317-tn.png! |
 |=. _le DAG après un merge : le commit C6 est un commit de merge_ |
 
 Le rebase :
@@ -303,7 +303,7 @@ Le rebase :
 # Il permet d'avoir un historique linéaire.
 # Il ne permet pas de travailler avec des fichiers modifiées dans l'espace de travail (stash).
 
-|=. !=http://git-scm.com/figures/18333fig0329-tn.png! |
+|=. !http://git-scm.com/figures/18333fig0329-tn.png! |
 |=. _le DAG après un rebase : le commit C3 est réappliqué sur la branche master..._ |
 
 * J'ai commité dans le tronc alors que je voulais faire une branche
