--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -90,14 +90,15 @@ Git est :
 * stocké sous la forme d'un graphe acyclique d'objets ou DAG(Directed Acyclic Graph)
 * accessible avec des références
 
-|=. !http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --hitorique du dépot--)! |
-|=. _Exemple de graphe acyclique représentant l'hitorique du dépot_ |
+|=. !http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --historique du dépot--)! |
+|=. _Exemple de graphe acyclique représentant l'historique du dépot_ |
 
 Toute manipulation de Git ne fait que manipuler ce graphe... (Ne jamais l'oublier et essayer de visualiser cela!!)
 ...en ne faisant qu'ajouter des commits!
 
 h2. 4.Présentation de GitExtension
 
+table{width:100%}.
 |=. !{width: 509px; height: 334px;}http://gitextensions.googlecode.com/files/commitlog205.png! |
 |=. _Interface de GitExtension montrant le DAG d'historique du dépot_ |
 
