--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -56,6 +56,13 @@ Les configuration nécessaires pour faire fonctionner Git sous Windows!:
 bc. git config --global core.ignorecase true
 git config --global core.autocrlf false
 
+Consultation de la liste des configurations : 
+
+bc. git config -l
+git config --global -l
+git config --local -l
+
+
 * Depuis GitExtension
 Au lancement de GitExtension, verifier que le checkup est bon!
 Ou configurer en conséquence...
@@ -105,11 +112,12 @@ table{width:100%}.
 
 Démo...
 
-* Consultation du graphe de commits
+* Consultation du graphe de commits (diff)
 * Zone de staging , ajout de fichiers, de lignes
 * Message de commits, templates, workitems, commit local, amend
 * Stash, Merge, Rebase
 * Fetch, Fetch et Rebase, Commit 
+* Historique (blame)
 
 h2. 5.Utilisation de Git-TFS:
 
@@ -292,6 +300,8 @@ h2. 6.Utilisation de Git
 bc. git stash save //pour mettre de côté
 git stash pop //pour récupérer le dernier stash mis de côté
 
+* Reset d'une branche à un certain commit (Mixed/Hard)
+
 * Merge / Rebase
 
 *Le merge :*
@@ -331,6 +341,8 @@ git branch MaBranche d995afd => creation d'une branche sur un commit (en indiqua
 * Astuce: Git ne fait qu'ajouter des commits et n'en détruie AUCUN! (sauf lors du passage du Garbage Collector tous les 30 jours pour effacer ceux non utilisés).
  Donc avant de faire une opération dont vous n'avez pas l'habitude, vous avez juste à créer une branche là où vous êtes qui vous servira de sauvegarde!
  Et à l'effacer quand vous avez réussi...
+ 
+* Trouver un commit fautif : Bisect !
 
 h2. 7. Aperçu de Git-TF
 
