--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -263,9 +263,9 @@ h3. 5.7.Scripts GitExtension (suite):
 Menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis :
 
 |_. Name|_. Cmd.|_. Arguments|
-|Tfs(Branche)> Fetch|sh|-c "git tfs fetch -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
-|Tfs(Branche)> Fetch and rebase|sh|-c "git tfsrebasebranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
-|Tfs(Branche)> Commit|sh|-c "git tfscommitbranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"|
+|Tfs(Branche)> Fetch|sh|bc. -c "git tfs fetch -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')" |
+|Tfs(Branche)> Fetch and rebase|sh|bc. -c "git tfsrebasebranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')" |
+|Tfs(Branche)> Commit|sh|bc. -c "git tfscommitbranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')" |
 
 Note: Pour les utiliser, bien faire attention à cliquer sur la ligne du commit où se trouve la branche distante 'tfs/maBranche' (en vert, dans GitExtension)
 
@@ -299,7 +299,7 @@ Avantage de la branche Git sur le shelveset TFS :
 
 h2. 6.Utilisation de Git
 
-* Règle de Base : Ne JAMAIS modifier des commits déjà partagés!!!!!!
+* *Règle de Base : Ne JAMAIS modifier des commits déjà partagés!!!!!!*
 
 * Mise de coté des fichiers modifiés de l'espace de travail (fonctionne comme une pile)
 
@@ -337,7 +337,7 @@ table{width:100%}.
 
 bc. git rebase -i HEAD~n (avec 'n' à remplacer par le nombre de commit qu'on veut réécrire)
 
-Attention : Ne pas enfreindre la règle précédente!!!
+Attention : Ne pas enfreindre la règle de base!!!
 
 * Historique des opérations (et réparation des erreurs!) : 
 
@@ -352,7 +352,7 @@ git branch MaBranche d995afd => creation d'une branche sur un commit (en indiqua
 
 h2. 7. Aperçu de Git-TF
 
-* Par défaut, création d'un seul commit de merge (utiliser l'option &ndash;&ndash;deep pour réappliquer les commits locaux sur le serveur TFS)
+* Par défaut, création d'un seul commit de merge (utiliser l'option &ndash;&ndash;deep pour réappliquer les commits locaux sur le serveur TFS) et perte des messages de commit (sauf le dernier)
 * Association des workitems dans la ligne de commande (donc pas de possibilité d'utiliser depuis une GUI :( )
  et même association de workitems pour TOUS les commits (si utilisation de l'option &ndash;&ndash;deep. Et apparement il y aurait un bug :( )
 * Pas de gestion des branches (un clone, donc un dépot par branche)
@@ -372,6 +372,7 @@ h3. Avantages:
 * Meilleur Historique
 * Plus de mode connecté/déconnecté de TFS :D
 * Backport de commit entre branches plus facile
+* Visual Studio est plus rapide car il n'a pas à contacter le serveur TFS pour extraire les fichiers en modifications
 
 h3. Inconvénient:
 * Ticket d'entrée légèrement plus important (il faut comprendre/visualiser les manipulations du DAG)
