--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -263,16 +263,16 @@ h3. 5.7.Scripts GitExtension (suite):
 Menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis :
 
 |_. Name|_. Cmd.|_. Arguments|
-|Tfs(Branche)> Fetch|@sh@|@-c "git tfs fetch -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"@ |
-|Tfs(Branche)> Fetch and rebase|@sh@|@-c "git tfsrebasebranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"@ |
-|Tfs(Branche)> Commit|@sh@|@-c "git tfscommitbranch $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"@ |
+|Tfs(Branche)> Fetch|@sh@|@-c "git tfs fetch -i $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
+|Tfs(Branche)> Fetch and rebase|@sh@|@-c "git tfsrebasebranch $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
+|Tfs(Branche)> Commit|@sh@|@-c "git tfscommitbranch $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
 
 Note: Pour les utiliser, bien faire attention à cliquer sur la ligne du commit où se trouve la branche distante 'tfs/maBranche' (en vert, dans GitExtension)
 
 Pour info mais non utile:
 
 |_. Name|_. Cmd.|_. Arguments|
-|Tfs(Branche)> Commit|@sh@|@-c "git tfs rcheckin -i $(echo {sRemoteBranch} &#124; sed 's/tfs\///')"@ |
+|Tfs(Branche)> Commit|@sh@|@-c "git tfs rcheckin -i $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
 
 h3. 5.8.Travailler avec les shelvesets
 
