--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -263,7 +263,7 @@ h3. 5.7.Scripts GitExtension (suite):
 Menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis :
 
 |_. Name|_. Cmd.|_. Arguments|
-|Tfs(Branche)> Fetch|@sh@|@-c "git tfs fetch -i $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
+|Tfs(Branche)> Fetch|@sh@|<notextile>@-c "git tfs fetch -i $(echo {sRemoteBranch} | sed 's/tfs\///')"@</notextile> |
 |Tfs(Branche)> Fetch and rebase|@sh@|@-c "git tfsrebasebranch $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
 |Tfs(Branche)> Commit|@sh@|@-c "git tfscommitbranch $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
 
