--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -263,9 +263,10 @@ h3. 5.7.Scripts GitExtension (suite):
 Menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remplira les 3 champs requis :
 
 |_. Name|_. Cmd.|_. Arguments|
-|Tfs(Branche)> Fetch|@sh@|<notextile>@-c "git tfs fetch -i $(echo {sRemoteBranch} | sed 's/tfs\///')"@</notextile> |
-|Tfs(Branche)> Fetch and rebase|@sh@|@-c "git tfsrebasebranch $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
-|Tfs(Branche)> Commit|@sh@|@-c "git tfscommitbranch $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
+|Tfs(Branche)> Fetch|@sh@|<code>-c "git tfs fetch -i $(echo {sRemoteBranch} | sed 's/tfs\///')"</code> |
+|Tfs(Branche)> Fetch and rebase|@sh@|pre. -c "git tfsrebasebranch $(echo {sRemoteBranch} | sed 's/tfs\///')" |
+|Tfs(Branche)> Commit|@sh@|bc.. -c "git tfscommitbranch $(echo {sRemoteBranch} | sed 's/tfs\///')"
+ |
 
 Note: Pour les utiliser, bien faire attention à cliquer sur la ligne du commit où se trouve la branche distante 'tfs/maBranche' (en vert, dans GitExtension)
 
