correction mise en forme des codes avec un '|' dans les tableaux!!!

--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -264,16 +264,15 @@ Menu "Settings"->"Settings..."->Onglet "Scripts" et ajoutez un ligne où on remp
 
 |_. Name|_. Cmd.|_. Arguments|
 |Tfs(Branche)> Fetch|@sh@|<code>-c "git tfs fetch -i $(echo {sRemoteBranch} </code> &#124; <code>sed 's/tfs\///')"</code> |
-|Tfs(Branche)> Fetch and rebase|@sh@|pre. -c "git tfsrebasebranch $(echo {sRemoteBranch} | sed 's/tfs\///')" |
-|Tfs(Branche)> Commit|@sh@|bc.. -c "git tfscommitbranch $(echo {sRemoteBranch} | sed 's/tfs\///')"
- |
+|Tfs(Branche)> Fetch and rebase|@sh@|<code>-c "git tfsrebasebranch $(echo {sRemoteBranch} </code> &#124; <code>sed 's/tfs\///')"</code> |
+|Tfs(Branche)> Commit|@sh@|<code>-c "git tfscommitbranch $(echo {sRemoteBranch}</code> &#124; <code>sed 's/tfs\///')"</code> |
 
 Note: Pour les utiliser, bien faire attention à cliquer sur la ligne du commit où se trouve la branche distante 'tfs/maBranche' (en vert, dans GitExtension)
 
 Pour info mais non utile:
 
 |_. Name|_. Cmd.|_. Arguments|
-|Tfs(Branche)> Commit|@sh@|@-c "git tfs rcheckin -i $(echo {sRemoteBranch} | sed 's/tfs\///')"@ |
+|Tfs(Branche)> Commit|@sh@|<code>-c "git tfs rcheckin -i $(echo {sRemoteBranch}</code> &#124; <code>sed 's/tfs\///')"</code> |
 
 h3. 5.8.Travailler avec les shelvesets
 
