--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -11,7 +11,7 @@ published: true
 
 _(ou comment utiliser Git en environnement hostile!)_
 
-Le controleur de code source TFS(Team Foundation Server) est bien souvant utilisé en entreprise.
+Le controleur de code source TFS(Team Foundation Server) est bien souvent utilisé en entreprise.
 
 Cependant, parmis les contrôleurs de code source, "TFS est celui le plus détesté par les développeurs :( et Git celui le plus apprécié":http://www.infoq.com/news/2010/03/Review-Version-Control-Systems .
 
